--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,44 @@
-<p>footer works!</p>
+<footer class="pmd-footer bg-dark pmd-footer-dark">
+    <style>
+        /* Set additional styling options for the columns*/
+        .column {
+        float: left;
+        width: 50%;
+        }
+    
+        .row:after {
+        content: "";
+        display: table;
+        clear: both;
+        }
+        </style>
+<div class="row">
+    
+
+
+  
+
+
+    <div class="column" class="container text-center" >
+        <div>
+            
+                <span>Bei Baffi</span>
+            
+        </div>
+        <div>
+            <p >Paraguay 1050, R8324 Cipolletti, Río Negro</p>
+            <p >Contacto:</p>
+            <p >Telefono: 299-5460125</p>
+            <p >Email: oubeibaffiar@gmail.com</p>
+        </div>
+        
+    </div>
+
+    <div class="column">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12414.105648848905!2d-67.9881331!3d-38.934800800000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a30e608b85ac5%3A0x35095b5fd7df8a9a!2sParaguay%201050%2C%20R8324%20Cipolletti%2C%20R%C3%ADo%20Negro!5e0!3m2!1ses-419!2sar!4v1697031545986!5m2!1ses-419!2sar"
+         width="850" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+
+
+</div>
